--- a/hu_aix_61.adoc
+++ b/hu_aix_61.adoc
@@ -49,7 +49,7 @@ NOTE: This toolkit is common across all configurations and protocols of the Host
 
 NOTE: The SAN toolkit is supported on AIX and PowerVM/VIOS OS versions.
 
-== Installing AIX Host Utilities
+== Install AIX Host Utilities
 
 
 The NetApp AIX Host Utilities software package is available on the https://mysupport.netapp.com/NOW/cgi-bin/software/?product=Host%2BUtilities%2B-%2BSAN&platform=Linux[NetApp Support Site^] in a compressed tar.gz file.
