--- a/hu_luhu_71.adoc
+++ b/hu_luhu_71.adoc
@@ -43,7 +43,7 @@ NOTE: This toolkit is common across all configurations and protocols of the Host
 
 NOTE: The SAN toolkit is not supported on Citrix XenServer, Oracle VM, and Red Hat Enterprise Virtualization Hypervisor.
 
-== Installing Linux Unified Host Utilities
+== Install Linux Unified Host Utilities
 
 include::_include/hu/reuse_hu_installing_luhu.adoc[]
 
