--- a/nvme_rhel_82.adoc
+++ b/nvme_rhel_82.adoc
@@ -22,7 +22,7 @@ NVMe/FC is supported on ONTAP 9.6 or later for RHEL 8.2. The RHEL 8.2 host runs 
 
 For RHEL 8.2, in-kernel NVMe multipath remains disabled by default. Therefore, you need to enable it manually. Steps for doing so are provided in the next section, "Enabling NVMe/FC on RHEL 8.2".
 
-== Enabling NVMe/FC on RHEL 8.2
+== Enable NVMe/FC on RHEL 8.2
 
 . Install Red Hat Enterprise Linux 8.2 GA on the server.
 +
@@ -84,7 +84,7 @@ defaults {
 
 . Restart the multipathd daemon by running a `systemctl restart multipathd`.
 
-== Configuring the Broadcom FC adapter for NVMe/FC
+== Configure the Broadcom FC adapter for NVMe/FC
 
 include::_include/nvme/reuse_configuring_broadcom_for_rhel_nvme_part1.adoc[]
 
@@ -103,7 +103,7 @@ include::_include/nvme/reuse_configuring_broadcom_for_rhel_nvme_part1.adoc[]
 
 include::_include/nvme/reuse_configuring_broadcom_for_rhel_nvme_part2.adoc[]
 
-==	Validating NVMe/FC
+==	Validate NVMe/FC
 
 include::_include/nvme/reuse_validating_nvme_fc_rhel.adoc[]
 
