--- a/nvme_rhel_84.adoc
+++ b/nvme_rhel_84.adoc
@@ -42,7 +42,7 @@ NVMe over Fabrics or NVMe-oF (including NVMe/FC and other transports) is support
 Refer to the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix^] for accurate details regarding supported configurations.
 
 
-== Enabling in-kernel NVMe Multipath
+== Enable in-kernel NVMe Multipath
 
 .	Install RHEL 8.4 GA on the server. After the installation is complete, verify that you are running the specified RHEL 8.4 GA kernel. See the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix^] for the most current list of supported versions.
 
@@ -105,7 +105,7 @@ defaults {
 . Restart the multipathd daemon by running a `systemctl restart multipathd` command to allow the new setting to take effect.
 
 
-== Configuring NVMe/FC
+== Configure NVMe/FC
 
 === Broadcom/Emulex
 
@@ -176,7 +176,7 @@ FCP CMPL: xb 00001f50 Err 0000d9f8
 ----
 
 
-====	 Enabling 1MB I/O size (Optional)
+====	 Enable 1MB I/O size (Optional)
 
 ONTAP reports an MDTS (Max Data Transfer Size) of 8 in the Identify Controller data which means the maximum I/O request size should be up to 1 MB. However, to issue I/O requests of size 1 MB for the Broadcom NVMe/FC host, the lpfc parameter `lpfc_sg_seg_cnt` should also be bumped up to 256 from the default value of 64. Use the following instructions to do so:
 
@@ -201,7 +201,7 @@ Now the Broadcom FC-NVMe host should be able to send up to 1MB I/O requests on t
 
 The native inbox `qla2xxx` driver included in the RHEL 8.4 GA kernel has the latest upstream fixes which are essential for ONTAP support.
 
-* Verify that you are running the supported adapter driver and firmware versions using the following command:
+. Verify that you are running the supported adapter driver and firmware versions using the following command:
 
 +
 
@@ -211,7 +211,7 @@ QLE2742 FW:v9.06.02 DVR:v10.02.00.104-k
 QLE2742 FW:v9.06.02 DVR:v10.02.00.104-k
 ----
 
-* Verify `ql2xnvmeenable` is set which enables the Marvell adapter to function as a NVMe/FC initiator using the following command:
+. Verify `ql2xnvmeenable` is set which enables the Marvell adapter to function as a NVMe/FC initiator using the following command:
 
 +
 ----
@@ -219,7 +219,7 @@ QLE2742 FW:v9.06.02 DVR:v10.02.00.104-k
 1
 ----
 
-== Configuring NVMe/TCP
+== Configure NVMe/TCP
 
 Unlike NVMe/FC, NVMe/TCP has no auto-connect functionality. This manifests two major limitations on the Linux NVMe/TCP host:
 
@@ -284,7 +284,7 @@ sectype: none
 # nvme connect-all -t tcp -w 192.168.2.9 -a 192.168.2.57 -l 1800
 ----
 
-== Validating NVMe-oF
+== Validate NVMe-oF
 
 . Verify that in-kernel NVMe multipath is indeed enabled by checking:
 +
