--- a/nvme_windows_2012r2.adoc
+++ b/nvme_windows_2012r2.adoc
@@ -26,18 +26,18 @@ Windows Failover Cluster (WFC) is not supported with ONTAP NVMe/FC because ONTAP
 
 NOTE: The external driver shipped by Broadcom for Windows NVMe/FC is not a true NVMe/FC driver but a translational SCSI ⇄ NVMe driver. This translational overhead does not necessarily impact performance, but it does negate the performance benefits of NVMe/FC. Thus, on Windows servers, NVMe/FC and FCP performance is the same, unlike on other operating systems such as Linux, where NVMe/FC performance is significantly better than that of FCP.
 
-== Enabling NVMe/FC on a Windows initiator host
+== Enable NVMe/FC on a Windows initiator host
 
 include::_include/nvme/reuse_enabling_on_windows_init_host.adoc[]
 
-== Configuring the Broadcom FC adapter in Windows for NVMe/FC
+== Configure the Broadcom FC adapter in Windows for NVMe/FC
 
 include::_include/nvme/reuse_configuring_broadcom_for_windows.adoc[]
 
-=== Enabling MPIO for NVMe devices on the Windows host
+=== Enable MPIO for NVMe devices on the Windows host
 
 include::_include/nvme/reuse_enabling_mpio_for_nvme_on_windows_host.adoc[]
 
-== Validating NVMe/FC
+== Validate NVMe/FC
 
 include::_include/nvme/reuse_validating_nvme_fc_windows.adoc[]
