--- a/hu_citrix_7x.adoc
+++ b/hu_citrix_7x.adoc
@@ -119,23 +119,23 @@ The following table shows the critical *multipathd* parameters for ONTAP LUNs an
 |===
 | Parameter
 | Setting
-| detect_prio | yes
-| dev_loss_tmo | "infinity"
-| failback | immediate
-| fast_io_fail_tmo | 5
-| features | "3 queue_if_no_path pg_init_retries 50"
-| flush_on_last_del | "yes"
-| hardware_handler | "0"
-| path_checker | "tur"
-| path_grouping_policy | "group_by_prio"
-| path_selector | "service-time 0"
-| polling_interval | 5
-| prio | "ontap"
-| product | LUN.*
-| retain_attached_hw_handler | yes
-| rr_weight | "uniform"
-| user_friendly_names | no
-| vendor | NETAPP
+| `detect_prio` | yes
+| `dev_loss_tmo` | "infinity"
+| `failback` | immediate
+| `fast_io_fail_tmo` | 5
+| `features` | "3 queue_if_no_path pg_init_retries 50"
+| `flush_on_last_del` | "yes"
+| `hardware_handler` | "0"
+| `path_checker` | "tur"
+| `path_grouping_policy` | "group_by_prio"
+| `path_selector` | "service-time 0"
+| `polling_interval` | 5
+| `prio` | "ontap"
+| `product` | LUN.*
+| `retain_attached_hw_handler` | yes
+| `rr_weight` | "uniform"
+| `user_friendly_names` | no
+| `vendor` | NETAPP
 |===
 
 .Example
