--- a/hu_rhel_85.adoc
+++ b/hu_rhel_85.adoc
@@ -14,7 +14,7 @@ summary: Describes how to use Red Hat Enterprise Linux 8.5 with ONTAP
 :linkattrs:
 :imagesdir: ./media/
 
-== Installing the Linux Unified Host Utilities
+== Install the Linux Unified Host Utilities
 
 include::_include/hu/reuse_hu_installing_luhu_without32.adoc[]
 
