--- a/hu_hpux_11iv3.adoc
+++ b/hu_hpux_11iv3.adoc
@@ -138,8 +138,11 @@ Following are some recommended parameter settings for HPUX 11i v3 and NetApp ONT
 | Title
 | Description
 | Partner ID
+| 1447287 | AUFO event on the isolated master cluster in SM-BC configuration causes temporary disruption on the HP-UX host | This issue occurs when there is an automatic unplanned failover (AUFO) event on the isolated master cluster in the SnapMirror Business Continuity (SM-BC) configuration. It might take more than 120 seconds for I/O to resume on the HP-UX host, but this might not cause any I/O disruption or error messages. This issue causes dual event failure because the connection between the primary and the secondary cluster is lost and the connection between the primary cluster and the mediator is also lost. This is considered a rare event, unlike other AUFO events. | NA
 | 1344935 | HPUX 11.31 Host intermittently reporting path status incorrectly on ASA setup. | Path reporting issues with ASA configuration. | NA
 | 1306354 | HPUX LVM creation sends I/O of block size above 1MB | SCSI Maximum Transfer Length of 1 MB is enforced in ONTAP All SAN Array. To restrict the Maximum Transfer Length from HP-UX hosts when connected to ONTAP All SAN Array, it is required to set the Maximum I/O size allowed by the HP-UX SCSI subsystem to 1 MB.
 
 Refer HP-UX vendor documentation for details. | NA
 |===
+
+// BURT 1451508, 2022-02-01
