--- a/hu_ol_79.adoc
+++ b/hu_ol_79.adoc
@@ -98,7 +98,7 @@ include::_include/hu/reuse_hu_recommended_settings.adoc[]
 | vendor | NETAPP
 |===
 
-NOTE: When you set the disable_changed_wwids multipath configuration parameter to YES, it disables access to the path device in the event of WWID change. Refer to the link:https://docs.oracle.com/en/operating-systems/oracle-linux/index.html[Oracle Linux documentation] for more information. 
+NOTE: When you set the disable_changed_wwids multipath configuration parameter to YES, it disables access to the path device in the event of WWID change. Refer to the link:https://docs.oracle.com/en/operating-systems/oracle-linux/index.html[Oracle Linux documentation] for more information.
 
 
 
@@ -121,7 +121,7 @@ devices {
 }
 ----
 
-NOTE: To configure Oracle Linux 7.9 RedHat Enterprise Kernel (RHCK), use the link:hu_rhel_79.html#recommended-settings[recommended settings] for Red Hat Enterprise Linux (RHEL) 7.9.
+NOTE: To configure Oracle Linux 7.9 RedHat Enterprise Kernel (RHCK), use the link:hu_rhel_79.html#recommended-settings[recommended settings^] for Red Hat Enterprise Linux (RHEL) 7.9.
 
 == Known Problems and Limitations
 
@@ -136,3 +136,5 @@ If I/O progress stops due to failure in continuing through existing active paths
 |===
 
 NOTE: For Oracle Linux (Red Hat compatible kernel) known issues, see the link:hu_rhel_79.html#known-problems-and-limitations[known issues] for Red Hat Enterprise Linux (RHEL) 7.9.
+
+// BURT 1447018, 25-02-2022
