--- a/hu_centos_79.adoc
+++ b/hu_centos_79.adoc
@@ -96,6 +96,8 @@ include::_include/hu/reuse_hu_recommended_settings.adoc[]
 | vendor | NETAPP
 |===
 
+NOTE: When you set the disable_changed_wwids multipath configuration parameter to YES, it disables access to the path device in the event of WWID change. Refer to the link:https://docs.centos.org/en-US/docs/[CentOS documentation] for more information.
+
 .Example
 
 The following example shows how to correct an overridden default. In this case, the `multipath.conf` file defines values for `path_checker` and `no_path_retry` that are not compatible with ONTAP LUNs. If they cannot be removed because of other SAN arrays still attached to the host, these parameters can be corrected specifically for ONTAP LUNs with a device stanza.
@@ -125,3 +127,5 @@ For CentOS (Red Hat compatible kernel) known issues, see the link:hu_rhel_79.htm
 == Release Notes
 
 include::_include/hu/reuse_hu_release_notes.adoc[]
+
+// BURT 1447018, 28-02-22
